altering the nginx.conf file 1st time

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,21 @@
-server {
-    listen 80;
-    server_name localhost;
-
-    location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html;
+http {
+    upstream backend {
+        server backend_server_ip:8000;
     }
 
-    location /stats {
-        proxy_pass http://backend:8000;
+    server {
+        listen 80;
+        server_name localhost;
+
+        location / {
+            root /usr/share/nginx/html;
+            index index.html;
+            try_files $uri $uri/ /index.html;
+        }
+
+        location /stats {
+            proxy_pass http://backend;
+        }
     }
 }
 
