--- a/nginx.conf
+++ b/nginx.conf
@@ -1,21 +1,15 @@
-http {
-    upstream backend {
-        server backend_server_ip:8000;
+server {
+    listen 80;
+    server_name localhost;
+
+    location / {
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ /index.html;
     }
 
-    server {
-        listen 80;
-        server_name localhost;
-
-        location / {
-            root /usr/share/nginx/html;
-            index index.html;
-            try_files $uri $uri/ /index.html;
-        }
-
-        location /stats {
-            proxy_pass http://backend;
-        }
+    location /stats {
+        proxy_pass http://backend:8000;
     }
 }
 
